# pokirobot_monorepo

./: .clangd  .gitignore  Makefile  README.md  west.yml
app/: CMakeLists.txt
boards/pokibot/interco_weact_h743/: Kconfig.defconfig  Kconfig.interco_weact_h743  board.cmake  board.yml  interco_weact_h743.dts  interco_weact_h743.yaml  interco_weact_h743_defconfig
boards/pokibot/pokimotor/: Kconfig.defconfig  Kconfig.pokimotor  board.yml  pokimotor.dts  pokimotor.yaml
brain_app/: CMakeLists.txt  Kconfig  Makefile  README.md  debug.conf  prj.conf
brain_app/boards/: mini_stm32h743.overlay  native_sim_native_64.overlay
brain_app/src/: const_publisher.c  main.c  pokdefs.h
brain_app/src/astar-jps/: AStar.c  IndexPriorityQueue.c  IndexPriorityQueue.h  README
brain_app/src/control/: control.c  control.h  control_sim.c
brain_app/src/nav/: Kconfig  nav.c  nav.h
brain_app/src/pakicontrol/: pakicontrol.c  pakicontrol.h
brain_app/src/pokarm/: pokarm.c  pokarm.h
brain_app/src/pokuicom/: pokuicom.c  pokuicom.h
brain_app/src/pomicontrol/: pomicontrol.c  pomicontrol.h
docs/review/: refactor.md
drivers/: CMakeLists.txt  Kconfig
drivers/lidar/: CMakeLists.txt  Kconfig  fhl-ld19.c  msmlidar.c
drivers/pokmac/: CMakeLists.txt  Kconfig  pokmac.c
drivers/pokstepper/: CMakeLists.txt  Kconfig  empty_pokstepper.c  mks_pokstepper.c
drivers/pokstepper/adi_tmc/: CMakeLists.txt  Kconfig  Kconfig.tmc22xx_pokibot  adi_tmc22xx_pokstepper_controller.c  adi_tmc_uart.c  adi_tmc_uart.h
drivers/servomotor/: CMakeLists.txt  Kconfig  empty_servomotor.c  pwm_servomotor.c
drivers/shared_uart/: CMakeLists.txt  Kconfig  shared_uart.c
drivers/stepper/: CMakeLists.txt  Kconfig
drivers/stepper/adi_tmc/: CMakeLists.txt  Kconfig  Kconfig.tmc22xx_pokibot  adi_tmc_uart.c  (+2 more)
drivers/uart_bus/: CMakeLists.txt  Kconfig  uart_bus.c
dts/bindings/: vendor-prefixes.txt
include/pokibot/: poklegscom.h  poktypes.h  pokuicom.h
legs_app/: CMakeLists.txt  Makefile  prj.conf
legs_app/src/: com.c  main.c
lib/: CMakeLists.txt  Kconfig
lib/poktocol/: CMakeLists.txt  Kconfig  poktocol.c
lib/poktrigo/: CMakeLists.txt  Kconfig  poktrigo.c
lib/pokutils/: CMakeLists.txt  Kconfig  pokutils.c
modules/: Kconfig
modules/paho-mqtt-c/: CMakeLists.txt  Kconfig
subsys/: CMakeLists.txt  Kconfig
subsys/mqtt_sim_messager/: CMakeLists.txt  Kconfig  mqtt_sim_messager.c
subsys/poklegscom/: CMakeLists.txt  Kconfig  poklegscom_msm.c  poklegscom_pokmac.c
subsys/pokuicom/: CMakeLists.txt  Kconfig  pokuicom_msm.c  pokuicom_pokmac.c
tests/test_lidar/: CMakeLists.txt  prj.conf
tests/test_mks-can/: CMakeLists.txt  Kconfig  prj.conf
tests/test_mks-can/boards/: nucleo_wl55jc.overlay
tests/test_mks-can/src/: main.c
tests/test_pokmac/: CMakeLists.txt  prj.conf
tests/test_pokstepper/: CMakeLists.txt  prj.conf
tests/test_servomotor/: CMakeLists.txt  prj.conf
tools/: visu_angle_detection.py
tools/lidar_visualizer/: lidar_point_visualiser.py
tools/strat_visualizer/: TODO.md  requirements.txt  state.eurobot_2025.json  state.eurobot_2026.json
zephyr/: module.yml
(+65 files in other folders)
